# float

./: .gitignore  .travis.yml  COPYING  Makefile.am  Makefile.in  PackageInfo.g  README  README.md  THANKS  TODO  config.h.in  configure  configure.ac  init.g  libtool  makedoc.g  newt.g  read.g
.github/workflows/: CI.yml
Intlab_V5.4/: Version2.m  startintlab.m
Intlab_V5.4/demos/: demos.xml  dgradient.m  dintlab.m  dintval.m
Intlab_V5.4/demos/html/: dhessian.html  dlong.html  dpolynom.html
Intlab_V5.4/gradient/@gradient/: abs.m  diag.m  display.m  isempty_.m  log.m  minus.m  mrdivide.m  mtimes.m  plus.m  sin.m  sqr.m  sum.m  times.m
Intlab_V5.4/hessian/: Contents.m
Intlab_V5.4/hessian/@hessian/: abs.m  acosh.m  atan.m  atanh.m  cos.m  cot.m  isempty.m  log10.m  mrdivide.m  rdivide.m  sinh.m  sqrt.m  subsref.m  sum.m
Intlab_V5.4/intval/: getround.m  infsup.m  intvalinit.m  lssresidual.m  stdfctsdata.m  str2intval.m  typeadj.m
Intlab_V5.4/intval/@intval/: abs.m  abss.m  acosh.m  acoth.m  acsc.m  atan.m  compmat.m  cos.m  csc.m  exp.m  in.m  in0.m  isempty_.m  mpower.m  norm.m  qdist.m  relerr.m  sin.m  sinh.m  times.m
Intlab_V5.4/long/@long/: mpower.m  mrdivide.m  mtimes.m  sup.m
Intlab_V5.4/polynom/: bernstein.m  chebyshev2.m  jacobi.m  randpoly.m
Intlab_V5.4/polynom/@polynom/: abss.m  bezout.m  mrdivide.m  ptrans.m
Intlab_V5.4/slope/@slope/: asec.m  asin.m  atanh.m  cot.m  display.m  exp.m  isempty_.m  log.m  minus.m  rdivide.m  sqr.m  sqrt.m  sum.m
Intlab_V5.4/utility/: Contents.m  dot_.m  gensum.m  helpp.m  random.m  randomc.m
_data/: package.yml
cnf/: Makefile.in  aclocal.m4  configure.ac
cnf/m4/: ac_check_cxsc.m4  ac_check_fplll.m4  ac_check_mpc.m4  ac_check_mpfi.m4  ac_check_mpfr.m4  ac_find_gap.m4
doc/: .gitignore  Makefile.am  Makefile.in  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chapBib.html  chapBib.txt  chapBib_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  float.xml  floatbib.xml  manual.css  manual.six
lib/: Makefile.am  cxsc.gi  float.gd  fplll.gi  mpc.gi  mpfi.gi  mpfr.gi  pickle.g  polynomial.gi  pslq.gi
m4/: ac_check_cxsc.m4  ac_check_fplll.m4  ac_check_mpc.m4  ac_check_mpfi.m4  ac_check_mpfr.m4  ac_sys_is.m4  ax_compiler_vendor.m4  ax_gcc_archflag.m4  ax_gcc_x86_cpuid.m4
sandbox/: cpoly.c
sandbox/Intlab_V5.4/: Contents.m  FAQ.txt  Readme.txt  intlablogo.m  intlabsetting.m  startup.m
sandbox/Intlab_V5.4/demos/: Contents.m  dhessian.m  dpolynom.m  dslope.m  gamma.m
sandbox/Intlab_V5.4/demos/html/: dgradient.html  dintlab.html  dintval.html  dslope.html
sandbox/Intlab_V5.4/gradient/: Contents.m
sandbox/Intlab_V5.4/gradient/@gradient/: acos.m  acosh.m  acot.m  acoth.m  acsc.m  asec.m  asin.m  asinh.m  atan.m  atanh.m  cos.m  cosh.m  cot.m  coth.m  csc.m  diam.m  exp.m  gradient.m  infsup.m  isempty.m  log10.m  midrad.m  mpower.m  ne.m  power.m  prod.m  rdivide.m  sec.m  sinh.m  sqrt.m  subsasgn.m  subsref.m  tan.m  tanh.m  trace.m  typeof.m
sandbox/Intlab_V5.4/hessian/@hessian/: acos.m  acot.m  acoth.m  asin.m  asinh.m  cosh.m  coth.m  csc.m  exp.m  hessian.m  infsup.m  isempty_.m  log.m  midrad.m  minus.m  mpower.m  mtimes.m  ne.m  plus.m  power.m  prod.m  sec.m  sin.m  sqr.m  tan.m  tanh.m  times.m
sandbox/Intlab_V5.4/intval/: Contents.m  abss.m  cintval.m  disp2str.m  gershgorin.m  isempty_.m  midrad.m  midradcmplx.m  setround.m  stdfctsinit.m  test.m  typeof.m  verifyeig.m  verifylss.m  verifynlss.m
sandbox/Intlab_V5.4/intval/@intval/: acos.m  acot.m  asec.m  asin.m  asinh.m  atanh.m  cosh.m  cot.m  coth.m  disp_.m  find.m  gershgorin.m  hull.m  inf.m  inf_.m  infsup.m  intersect.m  intval.m  isempty.m  log.m  log10.m  mid.m  midrad.m  mig.m  mtimes.m  nonzeros.m  plotlinsol.m  plus.m  power.m  prod.m  rad.m  rdivide.m  sec.m  spdiags.m  sqrt.m  sup.m  tan.m  tanh.m  toeplitz.m  typeadj.m
sandbox/Intlab_V5.4/intval/@intval/private/: sqrt_rnd.m
sandbox/Intlab_V5.4/long/: Contents.m
sandbox/Intlab_V5.4/long/@long/: addlongerror.m  display.m  exp.m  isempty.m  isempty_.m  long2dble.m  longshift.m  max.m  min.m  plus.m  rad.m  subsref.m
sandbox/Intlab_V5.4/polynom/: Contents.m  chebyshev.m  gegenbauer.m  hermite.m  laguerre.m  legendre.m
sandbox/Intlab_V5.4/polynom/@polynom/: bernsteincoeff.m  deconv.m  mpower.m  pderiv.m  plus.m  pscale.m  qdist.m  relerr.m  removevars.m  rootbound.m  subsasgn.m  sylvester.m
sandbox/Intlab_V5.4/setround_/: setround.m
sandbox/Intlab_V5.4/slope/: Contents.m
sandbox/Intlab_V5.4/slope/@slope/: abs.m  acos.m  acosh.m  acot.m  acoth.m  acsc.m  asinh.m  atan.m  cos.m  cosh.m  coth.m  csc.m  isempty.m  log10.m  mtimes.m  ne.m  plus.m  power.m  prod.m  sin.m  sinh.m  tan.m  tanh.m  times.m
sandbox/Intlab_V5.4/utility/: accdot.m  accsum.m  factors.m  fletcher.m  gendot.m  isspd.m  perms_.m  randint.m  randmat.m  randorth.m  relerr.m
src/: Makefile.am  Makefile.in  c_poly.C  cpoly.C  cxsc.C  cxsc_float.C  cxsc_float.h  cxsc_poly.C  cxsc_poly.h  float.c  floattypes.h  fplll.C  mp_float.c  mp_float.h  mp_poly.C  mp_poly.h  mpc.c  mpd.c  mpfi.c  mpfr.c
tst/: Makefile.am  arithmetic.tst  fplll.tst  polynomials.tst  testall.g
