#############################################################################
##
#W lib/Makefile.am                                          Laurent Bartholdi
##
#Y Copyright (C) 2014, Laurent Bartholdi
##
#############################################################################

gaplibdir = @datadir@/gap/pkg/@PACKAGE@/lib

gaplib_DATA = \
	float.gd \
	mpfr.gi \
	mpc.gi \
	mpfi.gi \
	fplll.gi \
	cxsc.gi \
	polynomial.gi \
	pickle.g

EXTRA_DIST = \
	$(gaplib_DATA)

#E lib/Makefile.am . . . . . . . . . . . . . . . . . . . . . . . . . ends here
