#############################################################################
##
#W tst/Makefile.am                                          Laurent Bartholdi
##
#Y Copyright (C) 2014, Laurent Bartholdi
##
#############################################################################

tstdir = @datadir@/gap/pkg/@PACKAGE@/tst

tst_DATA = \
	testall.g \
		arithmetic.tst \
		polynomials.tst

EXTRA_DIST = \
	$(tst_DATA)

#E tst/Makefile.am . . . . . . . . . . . . . . . . . . . . . . . . . ends here
